# Modest

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  INSTALL.md  Makefile  Makefile.bin.cfg  Makefile.cfg  README.md  api_breaking_changes.md  modest.pc  modest.pc.in  modestConfig.cmake.in
debian/: changelog  control  libmodest-dev.install  libmodest.install  rules
devel/osx/Modest/: main.c
devel/osx/Modest.xcodeproj/: project.pbxproj
docs/: README_RU.md  index.html
documents/: myhtml_life_cycle.xml  myhtml_life_cycle_without_threads.xml
examples/: Makefile
examples/declarations/: style_attr_low_level.c
examples/modest/: Makefile.mk  css_property_to_node.c  css_real_and_default_property_to_node.c  property_to_node.c  selectors_find_nodes_low_level.c  selectors_prepare_low_level.c  style_attr_low_level.c
examples/mycss/: Makefile.mk  css_low_level.c  declaration_low_level.c  detect_charset_encoding_high_level.c  example.h  incoming_buffer_high_level.c  selectors_low_level.c  stylesheet_low_level.c  token_type_convert_high_level.c  tokenizer_buffer_high_level.c  tokenizer_chunk_high_level.c  tokenizer_high_level.c
examples/myencoding/: Makefile.mk  detect_encoding_by_trigrams.c  detect_encoding_in_meta.c  encoding_by_name.c
examples/myfont/: Makefile.mk  glyph_metrics.c
examples/myhtml/: attributes_high_level.c  chunks_high_level.c  custom_tree_high_level.c  detect_encoding_high_level.c  detect_encoding_in_meta_high_level.c  encoding_by_name_high_level.c  fragment_high_level.c  get_title_low_level.c  insert_in_appropriate_place_high_level.c  modify_and_serialize.c  nodes_by_attr_key_high_level.c  nodes_by_attr_value_high_level.c  parse_without_whitespace.c  string_manipulate_high_level.c  tokenizer_colorize_high_level.c  tokenizer_colorize_low_level.c
examples/myurl/: Makefile.mk  url_data  url_data.c  url_parse  url_parse.c  url_relative  url_relative.c
examples/selectors/: selectors_low_level.c
include/modest/: declaration.h  glue.h  modest.h  myosi.h
include/modest/finder/: finder.h  match.h  myosi.h  pseudo_class.h  resource.h  thread.h  type.h
include/modest/layer/: binding.h  layer.h  tree.h
include/modest/node/: node.h  property.h  raw_property.h  serialization.h
include/modest/render/: begin.h  binding.h  tree.h  tree_node.h
include/modest/style/: default.h  default_entries.h  default_resources.h  map.h  map_resource.h  raw.h  sheet.h  type.h
include/mycore/: myosi.h  mythread.h  thread.h  thread_queue.h
include/mycore/utils/: mchar_async.h  mcsync.h  mhash.h
include/mycss/: an_plus_b.h  api.h  check.h  convert.h  entry.h  mycss.h  myosi.h  mystring.h  parser.h  stack.h  stylesheet.h  syntax_ending.h  tokenizer.h  tokenizer_end.h  tokenizer_global.h  tokenizer_resource.h
include/mycss/declaration/: default.h  default_entries.h  default_resources.h  entry.h  entry_destroy.h  entry_destroy_resources.h  init.h  myosi.h  parser.h  serialization.h  serialization_resources.h  state.h
include/mycss/media/: init.h  myosi.h  (+1 more)
include/myencoding/: encoding.h  myosi.h  mystring.h
include/myfont/: cmap.h  glyf.h  head.h  hhea.h  hmtx.h  loca.h  maxp.h  myfont.h  myosi.h  name.h  os_2.h  pclt.h  vhea.h  vmtx.h
include/myhtml/: api.h  data_process.h  myhtml.h  mynamespace.h  myosi.h  mystring.h  parser.h  rules.h  serialization.h  stream.h  tag.h  token.h  tokenizer.h  tokenizer_doctype.h  tokenizer_script.h  tree.h
include/myunicode/: myosi.h
include/myurl/: host.h  myosi.h  parser.h  path.h  punycode.h  scheme.h  scheme_const.h  scheme_resources.h  serialization.h  url.h  utils.h
projects/: CMakeLists.txt
source/modest/: Makefile.mk  declaration.c  declaration.h  glue.c  glue.h  modest.c  modest.h  myosi.h
source/mycore/: Makefile.mk  myosi.c  myosi.h  mythread.c  mythread.h  thread.c  thread.h  thread_queue.c  thread_queue.h
source/mycss/: Makefile.mk  an_plus_b.c  an_plus_b.h  api.h  check.c  check.h  convert.c  convert.h  entry.c  entry.h  mycss.c  mycss.h  myosi.h  mystring.c  mystring.h  parser.c  parser.h  stack.c  stack.h  stylesheet.c  stylesheet.h  syntax_ending.h  tokenizer.c  tokenizer.h  tokenizer_end.c  tokenizer_end.h  tokenizer_global.c  tokenizer_global.h  tokenizer_resource.h
source/myencoding/: Makefile.mk  detect.c  detect.h  myosi.h  mystring.h
source/myfont/: Makefile.mk  cmap.c  cmap.h  glyf.c  glyf.h  head.c  head.h  hhea.c  hhea.h  hmtx.c  hmtx.h  loca.c  loca.h  maxp.c  maxp.h  myfont.c  myfont.h  myosi.c  myosi.h  name.c  name.h  os_2.c  os_2.h  pclt.c  pclt.h  vhea.c  vhea.h  vmtx.c  vmtx.h
source/myhtml/: Makefile.mk  api.h  data_process.c  myhtml.c  myhtml.h  mynamespace.c  mynamespace.h  myosi.h  mystring.h  parser.c  rules.c  serialization.c  serialization.h  stream.c  tag.c  tag.h  tag_init.c  tag_init.h  token.c  token.h  tokenizer.c  tokenizer.h  tokenizer_doctype.c  tokenizer_script.c  tokenizer_script.h  tree.c  tree.h  url.h
source/myunicode/: Makefile.mk  myosi.c  myosi.h
source/myurl/: Makefile.mk  host.c  host.h  myosi.c  myosi.h  parser.c  parser.h  parser_end.c  path.c  path.h  punycode.c  punycode.h  resources.h  scheme.c  scheme.h  scheme_const.h  scheme_resources.h  serialization.c  serialization.h  url.c  url.h  utils.c  utils.h
test/: Makefile
test/mycore/: Makefile.mk
test/mycss/: Makefile.mk  declaration  declaration.c  pseudo_class_contains
test/myencoding/: Makefile.mk  encoding_detect_meta.c
test/myhtml/: commoncrawl  commoncrawl.c  encoding_detect_meta.c  pseudo_class_contains  pseudo_class_contains.c
test/myurl/: Makefile.mk  url  url.c
test_suite/mycss/: declaration
test_suite/myencoding/: encoding_detect_meta
test_suite/myhtml/: pseudo_class_contains
test_suite/myurl/: url
utils/MyCSS/: an+b.pl  begin.pl  color.pl  declaration.pl  functions.pl  image.pl  media.pl  mycss_first_char.pl  namespace.pl  pseudo.pl  pseudo_element.pl  rules.pl  selectors.pl  units.pl
utils/MyHTML/: autodetect_single_byte.pl  encoding.pl  encoding_name.pl  entities.pl  forall.pl  namespace.pl  tags_init.pl  tags_style_default.pl  url.pl  url_resources.pl
(+261 files in other folders)
